Fixat felaktig route-URL.

--- a/pages/shows/shows.html
+++ b/pages/shows/shows.html
@@ -2,7 +2,7 @@
 	<h1>Nöjen</h1>
 
 	<div class="list-group">
-		<a href="#/packages/{{show.id}}" class="list-group-item"
+		<a href="#/shows/{{show.id}}" class="list-group-item"
 			ng-repeat="show in shows">{{show.name}}</a>
 	</div>
 
