--- a/pages/performances/performance.html
+++ b/pages/performances/performance.html
@@ -26,10 +26,15 @@
 					<th>Ledig</th>
 					<th>Platser</th>
 				</tr>
-				<tr ng-repeat="(k, p) in stats">
-					<td><span ng-show="k!='null'">{{k}}</span>&nbsp;</td>
-					<td>{{p.available}}</td>
-					<td>{{p.available + p.reserved}}</td>
+				<tr ng-repeat="p in profiles">
+					<td>{{p.name}}</td>
+					<td>{{stats[p.id].available}}</td>
+					<td>{{stats[p.id].total}}</td>
+				</tr>
+				<tr>
+					<td><i>Totalt</i></td>
+					<td><i>{{stats[0].available}}</i></td>
+					<td><i>{{stats[0].total}}</i></td>
 				</tr>
 			</table>
 		</div>
