Visa antal biljetter som inte tillhör någon kvot.

--- a/pages/performances/performance.html
+++ b/pages/performances/performance.html
@@ -33,9 +33,9 @@
 					<td ng-click="changeQuota(p)">{{p.total}}</td>
 				</tr>
 				<tr>
-					<td><i>Totalt</i></td>
-					<td><i>{{stats[0].available}}</i></td>
-					<td><i>{{stats[0].total}}</i></td>
+					<td><i>Ingen</i></td>
+					<td><i>{{noprofile.available}}</i></td>
+					<td><i>{{noprofile.total}}</i></td>
 				</tr>
 			</table>
 		</div>
