--- a/pages/shows/shows.html
+++ b/pages/shows/shows.html
@@ -10,7 +10,7 @@
 		<form name="newShow" ng-submit="addNewShow(show)" novalidate>
 			<input type="text" placeholder="Namn" ng-model="show.name" required>
 			<input type="submit" class="btn btn-primary"
-				value="Lägg till ny föreställning">
+				value="Lägg till nöje">
 
 		</form>
 	</div>
