--- a/pages/performances/performance.html
+++ b/pages/performances/performance.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<h1>{{performance.show.name}} {{performance.start | date :
-		'yyyy-MM-dd HH:ss'}}</h1>
+		'yyyy-MM-dd HH:mm'}}</h1>
 	<p ng-show="performance.surcharge != 0">Prispålägg:
 		{{performance.surcharge}} kr</p>
 	<h2>Siffror</h2>
