--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 				<ul class="nav navbar-nav" ng-if="userStatus('LOGGED_IN')">
 					<li class="level-one"><a href="#/shows" class="menu_header">Nöjen</a></li>
 					<li class="level-one"><a href="#/users" class="menu_header">Karnevalister</a></li>
+					<li class="level-one"><a href="#/reports" class="menu_header">Rapporter</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="level-one" ng-show="userStatus('ERROR')"><i
