--- a/pages/reports/sales.html
+++ b/pages/reports/sales.html
@@ -5,6 +5,7 @@
 			<tr>
 				<th>Datum</th>
 				<th>Nöje</th>
+				<th>Profil</th>
 				<th>Försäljning</th>
 				<th>Återköp</th>
 				<th>Netto</th>
@@ -14,12 +15,13 @@
 			<tr ng-repeat="e in report.entries">
 				<td>{{e.day}}</td>
 				<td>{{e.show_name}}</td>
+				<td>{{e.profile_name}}</td>
 				<td>{{e.sales | number}}</td>
 				<td>{{e.refunds | number}}</td>
 				<td>{{e.net | number}}</td>
 			</tr>
 			<tr>
-				<th colspan="2">Summa</th>
+				<th colspan="3">Summa</th>
 				<th>{{report.sales | number}}</th>
 				<th>{{report.refunds | number}}</th>
 				<th>{{report.net | number}}</th>
