Hantering av specialdatum och kommentarer på föreställningar.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	src="/bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
 <link rel="stylesheet" type="text/css"
 	href="/bower_components/angular-xeditable/dist/css/xeditable.min.css" />
+<script
+	src="/bower_components/angular-filter/dist/angular-filter.min.js?v=BUILD_NUMBER"></script>
 
 <!-- JQuery -->
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
