Grundläggande sida för att visa en bokning och dess transaktioner.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 					<li class="level-one"><a href="#/shows" class="menu_header">Nöjen</a></li>
 					<li class="level-one"><a href="#/users" class="menu_header">Karnevalister</a></li>
 					<li class="level-one"><a href="#/reports" class="menu_header">Rapporter</a></li>
+					<li class="level-one"><a href="#/orders" class="menu_header">Bokningar</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="level-one" ng-show="userStatus('ERROR')"><i
