Rapportsida för lediga platser på nöjen.

--- a/pages/reports/sales.html
+++ b/pages/reports/sales.html
@@ -1,4 +1,5 @@
 <div class="container" ng-controller="SalesCtrl">
+	<div ng-include="'/pages/reports/menu.html?v=BUILD_NUMBER'"></div>
 	<h1>Försäljning</h1>
 	<table class="table">
 		<thead>
