Nöjesrapporten visar betalda och utskrivna biljetter.

--- a/pages/reports/shows.html
+++ b/pages/reports/shows.html
@@ -9,6 +9,9 @@
 				<td>Plats</td>
 				<td>Totalt</td>
 				<td>Lediga</td>
+				<td>Betalda</td>
+				<td>Utskrivna</td>
+				<td>Ej utskrivna</td>
 			</tr>
 		</thead>
 		<tbody>
@@ -18,6 +21,9 @@
 				<td>{{entry.category_name}}</td>
 				<td>{{entry.total}}</td>
 				<td>{{entry.available}}</td>
+				<td>{{entry.paid}}</td>
+				<td>{{entry.printed}}</td>
+				<td>{{entry.nonprinted}}</td>
 			</tr>
 		</tbody>
 	</table>
