--- a/pages/performances/performance.html
+++ b/pages/performances/performance.html
@@ -31,6 +31,19 @@
 		</tr>
 	</table>
 </div>
+<div class="container" ng-show="categories.length > 0">
+	<h2>Lägg till plats</h2>
+	<form class="row" ng-submit="addSeat(newSeatCategory)">
+		<div class="form-group col-sm-6">
+			<select class="form-control" ng-model="newSeatCategory"
+				ng-options="c as c.name for c in categories"></select>
+		</div>
+		<div class="form-group col-sm-6">
+			<input type="submit" class="form-control" value="Lägg till"
+				ng-disabled="working" />
+		</div>
+	</form>
+</div>
 <div class="container" ng-init="showSeatsLimit = 10">
 	<h2>Platser</h2>
 	<table class="table table-bordered">
